fixed art card double border

--- a/src/pages/_home.scss
+++ b/src/pages/_home.scss
@@ -163,6 +163,7 @@
   padding: 0rem;
   padding-top: 0.4rem;
   transition: none;
+  border: none;
 }
 
 .style_card {
